--- a/index.html
+++ b/index.html
@@ -80,21 +80,19 @@
                     <h3 class="hasil-perhitungan">Hasil Perhitungan BMI</h3>
                     <p class="bmi-value"><br></p>
                     <p class="bmi-category">Hasil perhitungan BMI akan muncul setelah Anda menghitung.</p>
-                    <button id="downloadResult" style="display:none;">Download Hasil BMI</button>
+                    <button class="download-hasil" id="downloadResult" style="display:none;">Download Hasil BMI</button>
                 </div>
 
-                <p class="hasilnya">Hasil BMI diantara 23 dan 25 berada dalam kategori overweight atau berat badan berlebih.<br>
-                    Cara terbaik untuk menurunkan berat badan adalah dengan mengatur kalori makanan yang
-                    dikonsumsi dan berolahraga. Jika BMI Anda berada dalam kategori ini maka Anda dianjurkan untuk menurunkan berat badan<br>
-                    hingga batas normal.</p>
+                <p class="hasilnya">Jika Anda memiliki kekhawatiran mengenai hasil BMI Anda, konsultasikan dengan ahli gizi untuk<br>
+                    mendapatkan panduan yang lebih mendetail dan program diet yang sesuai dengan kondisi tubuh Anda.</p>
 
                 <div class="btn-container">
                     <button class="btn-konsulregis">Konsultasi Ahli Gizi Via Aplikasi</button>
                     <button class="btn-konsulregis">Registrasi Online Ahli Gizi</button>
                 </div>
 
-                <p class="hasilnya">BMI tidak sepenuhnya mewakili diagnosis menyeluruh dari kesehatan tubuh dan resiko penyakit
-                    seseorang. Anda perlu konsultasi lebih lanjut mengenai resiko dan kekhawatiran Anda terkait dengan berat badan Anda.</p>
+                <p class="hasilnya">BMI tidak sepenuhnya mewakili diagnosis menyeluruh dari kesehatan tubuh dan resiko penyakit seseorang.<br>
+                    Anda perlu konsultasi lebih lanjut mengenai resiko dan kekhawatiran Anda terkait dengan berat badan Anda.</p>
             
                 <form>
                     <div class="penyakit-group">
